added-pics-formed-space

--- a/code/02 Advanced CSS  Portfolio/index.html
+++ b/code/02 Advanced CSS  Portfolio/index.html
@@ -22,6 +22,8 @@
         </div>    
     </header>
     <subtile>
+        <img id="head-img" src="./assets/images/valleyshot.jpg" style="width: 100%; height: 337px;"
+        alt="clouds covering Union County Oregon">
         <h2>
             Cool Stuff Here 
         </h2>
@@ -29,7 +31,7 @@
 <main>
     <section>
 
-        <p id="bbox">
+        <p>
             iuhwiuuwhvwiuuhduhcusdhciushdciusdhcuishduchsduichisuhcisuhciusdhciudhcsuidchudischiusdhcisdhuhciushcisudhciusdchiusdchuisdchsiuhcsuic
             scsduciusdchsdiuchisudchiusdhcisduchisudhciusdhcisduchsuidchiusdhcisdhciusdhcisduchsdiuhcsduihciusdhcuishciusdhcisdcs
             scsdcdsuicuisdhcuisdhciusdhcsdiuhicuhsdiuchdsuihciudshciusdhciusdhcudischiusdhcsdiuchisduchisduchuisdchdsiuchsiduchsiduhc</p>
@@ -43,26 +45,31 @@
     <div>
     <h1> Work</h1>
     </div>
-    <div class="box">
-        <h3>Surf Report</h3>
-        <p>Merni Stack</p>
-    </div>
-    <div class="box">
-        <h3> Led Wall</h3>
-        <p> Node/lot</p>
-    </div>
-    <div class="box">
+    <section id="bigbox">
+        <img src="./assets/images/2owlhead.JPG" style="width:800px; height:400px; " alt="2 baby owls in a tree">
+        <h3>UP CLOSE PHOTOGRAPHY</h3>
+        <p>birds before their first flight</p>
+    </section>
+    <section class="box">
+        <img src="./assets/images/ducks.JPG" style="width: 500px; height:300px" alt="ducks swimming in a V">
+        <h3>Waterfowl</h3>
+        <p>all year round</p>
+    </section>    
+    <section class="box">
+        <img src="./assets/images/mtfanny.jpg" style="width: 500px; height:300px" alt="Cove Oregon at its finest">
         <h3>Calulator</h3>
         <p>React/java/css</p>
-    </div>    
-    <div class="box">
-        <h3>Pastel Puzzles</h3>
-        <p> i love puzzles</p>
-    </div>
-    <div class="box">
-        <h3>Run Buddy</h3>
-        <p>small running text</p>
-    </div>
+    </section>    
+    <section class="box">
+        <img src="./assets/images/orangesunset.jpg" style="width: 500px; height:300px"alt="blazing orange sunset in elgin oregon">
+        <h3>Drone photography</h3>
+        <p> DJI products</p>
+    </section>
+    <section class="box">
+        <img src="./assets/images/elk.jpg" style="width: 500px; height:300px" alt="Small herd of elk">
+        <h3>Best Of Oregon</h3>
+        <p>Wildlife caught in its beauty</p>
+    </section>
 
 </main>
 <footer>
