added-sidebar-aligned-pics-still-needs-work

--- a/code/02 Advanced CSS  Portfolio/index.html
+++ b/code/02 Advanced CSS  Portfolio/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/style.css"/>
 </head>
 <body>
+    <!-- header -->
     <header>
         <div class="main-header" id="links">
             <h1>Crayson McBride </h1>
@@ -21,64 +22,64 @@
                 </div>    
         </div>    
     </header>
-    <subtile>
-        <img id="head-img" src="./assets/images/valleyshot.jpg" style="width: 100%; height: 337px;"
-        alt="clouds covering Union County Oregon">
+    <!-- needs a nav bar -->
+    <nav>
         <h2>
-            Cool Stuff Here 
+            Photography/Videography 
         </h2>
-    </subtile>
-<main>
+        <img id="head-img" src="./assets/images/valleyshot.jpg"
+         style="width: 100%; height: 337px;"
+        alt="clouds covering Union County Oregon sunset">
+    </nav>
+    <!-- BODY WITH BOXES -->
+    <main class="main">
     <section>
-
-        <p>
-            iuhwiuuwhvwiuuhduhcusdhciushdciusdhcuishduchsduichisuhcisuhciusdhciudhcsuidchudischiusdhcisdhuhciushcisudhciusdchiusdchuisdchsiuhcsuic
-            scsduciusdchsdiuchisudchiusdhcisduchisudhciusdhcisduchsuidchiusdhcisdhciusdhcisduchsdiuhcsduihciusdhcuishciusdhcisdcs
-            scsdcdsuicuisdhcuisdhciusdhcsdiuhicuhsdiuchdsuihciudshciusdhciusdhcudischiusdhcsdiuchisduchisduchuisdchdsiuchsiduchsiduhc</p>
+        <p id="p">
+           Growing up in North-East Oregon, you see and experinece four seasons at its best. Harsh cold snow-packed winters to hot dry weeks of 100 degree temps in the summer. Our spring and fall months are packed full
+        of life and colors. I'm blessed to be a photographer/videographer in this part of the world! </p>
         </p>
     </section>
-    
-    <div>
-            <h1>About me</h1>
-
-    </div>
-    <div>
-    <h1> Work</h1>
-    </div>
-    <section id="bigbox">
-        <img src="./assets/images/2owlhead.JPG" style="width:800px; height:400px; " alt="2 baby owls in a tree">
-        <h3>UP CLOSE PHOTOGRAPHY</h3>
-        <p>birds before their first flight</p>
-    </section>
-    <section class="box">
-        <img src="./assets/images/ducks.JPG" style="width: 500px; height:300px" alt="ducks swimming in a V">
-        <h3>Waterfowl</h3>
-        <p>all year round</p>
-    </section>    
-    <section class="box">
-        <img src="./assets/images/mtfanny.jpg" style="width: 500px; height:300px" alt="Cove Oregon at its finest">
-        <h3>Calulator</h3>
-        <p>React/java/css</p>
-    </section>    
-    <section class="box">
-        <img src="./assets/images/orangesunset.jpg" style="width: 500px; height:300px"alt="blazing orange sunset in elgin oregon">
-        <h3>Drone photography</h3>
-        <p> DJI products</p>
-    </section>
-    <section class="box">
-        <img src="./assets/images/elk.jpg" style="width: 500px; height:300px" alt="Small herd of elk">
-        <h3>Best Of Oregon</h3>
-        <p>Wildlife caught in its beauty</p>
-    </section>
-
-</main>
-<footer>
-<section>
-    <h1> Contact Me</h1>
-</section>
-<section>
+    <aside>
+        <h1>My Photography</h1>
+        
+        <h1>What I like to Capture</h1>
+        </aside>
+        <div class="box">
+            <button class="images">
+                <h3>UP CLOSE PHOTOGRAPHY</h3>
+                <p>birds before their first flight</p>
+                <img src="./assets/images/2owlhead.JPG" style="width: 850px; height:400px;"  alt="2 baby owls in a tree">
+                </button>
+                <button class="images">
+                <h3>Waterfowl</h3>
+                <p>all year round</p>
+                <img src="./assets/images/ducks.JPG" style="width:400px; height:250px;" alt="ducks swimming in a V">
+                </button>    
+                <button class="images">
+                <h3>Showing off the best seasons</h3>
+                <p>best photos of NE Oregon</p>
+                <img src="./assets/images/mtfanny.jpg" style="width:400px; height:250px;" alt="Cove Oregon at its finest">
+                </button>    
+                <button class="images">
+                <h3>Drone photography</h3>
+                <p> DJI products</p>
+                <img src="./assets/images/orangesunset.jpg"style="width:400px; height:250px;" alt="blazing orange sunset in elgin oregon">
+                </button>
+                <button class="images">
+                <h3>Best Of Oregon</h3>
+                <p>Wildlife caught in its beauty</p>
+                <img src="./assets/images/elk.jpg" style="width:400px; height:250px;" alt="Small herd of elk">
+            </button>
+        </div>
+    </main>
+    <!-- footer -->
+    <footer>
+        <div>
+            <h1> Contact Me</h1>
+        </div>    
+    <section>
     <nav>
-        <ul id="nav">
+        <ul class="nav">
          <a href="#"> 541-805-4071</a> 
          <a href="#"> crayson.mcbride@gmail.com</a> 
          <a href="#"> GitHub</a> 
@@ -86,7 +87,7 @@
          <a href="#"> Linkin</a> 
         </ul>
     </nav>
-</section>
-</footer>    
+    </section>
+    </footer>    
 </body>
 </html>
